--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <title>Home portal</title>
 </head>
 <body>
-  <h1>=^..^=</h1>
+  <h1>Home Portal</h1>
+  <h2>Top links</h2>
+  <ul>
+  	<li>GMail</li>
+  	<li class="group-home">Reddit</li>
+  	<li class="group-home">SOL</li>
+  </ul>
 </body>
 <html>
